# shell_gpt

./: .gitignore  CONTRIBUTING.md  README.md  install.py  pyproject.toml
.clinerules/: memory.md
.github/instructions/: memory.instructions.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md  testCoverage.md
sgpt/: app.py  command_safety.py  utils.py
sgpt/handlers/: chat_handler.py  question_handler.py  repl_handler.py
tests/: _integration.py  test_chat_handler_enhancements.py  test_code.py  test_command_safety.py  test_default.py  test_question_handler.py  test_repl_questions.py  test_roles.py  test_shell.py  utils.py
