[tool.poetry]
name = "shell_gpt"
version = "0.0.1"
description = "A command-line productivity tool powered by large language models, will help you accomplish your tasks faster and more efficiently."
authors = ["Farkhod Sadykov <farkhod@sadykov.dev>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ther1d/shell_gpt"
documentation = "https://github.com/TheR1D/shell_gpt/blob/main/README.md"
keywords = ["shell", "gpt", "openai", "ollama", "cli", "productivity", "cheet-sheet"]

packages = [{include = "sgpt"}]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.extras]
litellm = ["litellm"]

[tool.poetry.scripts]
sgpt = "sgpt:cli"

[tool.isort]
profile = "black"
skip = "__init__.py"

[tool.mypy]
strict = true
exclude = ["build"]

[tool.codespell]
skip = '.git,venv'

[tool.poe.tasks]
test = { cmd = "pytest tests -p no:warnings", help = "Run tests" }
lint = { sequence = [{shell = "ruff ."}, {shell = "mypy ."}], help = "Run linters" }
format = { sequence = [{shell = "isort ."}, {shell = "black ."}, {shell = "codespell ."}], help = "Format code" }
install_dev = { cmd = "poetry install --with dev", help = "Install development dependencies" }
ci = { sequence = ["format", "lint", "test"], help = "Run all code quality checks (format, lint, test) in preparation for commit" }
publish = { cmd = "pip install . --force-reinstall", help = "Install the local package globally for development" }

[tool.poetry.dependencies]
python = ">=3.10"
openai = ">=1.34.0,<2.0.0"
typer = ">=0.7.0,<1.0.0"
click = ">=7.1.1,<9.0.0"
rich = ">=13.1.0,<14.0.0"
distro = ">=1.8.0,<2.0.0"
instructor = {version = ">=1.0.0,<2.0.0", python = ">=3.10,<4.0"}
pyreadline3 = {version = ">=3.4.1,<4.0.0", platform = "win32"}
litellm = {version = "==1.42.5", optional = true}
pyyaml = ">=6.0.0,<7.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "==0.0.256"
pre-commit = ">=3.1.1,<4.0.0"
pytest = ">=7.2.2,<8.0.0"
requests-mock = {extras = ["fixture"], version = ">=1.10.0,<2.0.0"}
isort = ">=5.12.0,<6.0.0"
black = "==23.1.0"
mypy = "==1.1.1"
types-requests = "==2.28.11.17"
codespell = ">=2.2.5,<3.0.0"
poethepoet = "^0.34.0"
